# self-host-llm

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
src/routes/: +layout.svelte  +page.svelte  Chat.svelte  ChatMessage.svelte
src/self_host_llm/: app.py  config.yaml  main.py
