[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "self_host_llm"
authors = [{ name = "Janick Rohrbach" }]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "fastapi >= 0.95.0",
    "PyYAML >= 6.0",
    "sentencepiece >=0.1.97",
    "transformers >= 4.27.4",
    "torch >= 2.0.0",
    "uvicorn >= 0.21.1",
]
version = "0.0.1"

[project.optional-dependencies]
dev = ["black", "build", "coverage", "mypy", "pytest", "ruff"]

[tool.setuptools]
packages = ["self_host_llm"]
package-dir = { "" = "src" }
